# owlmon

./: .gitignore  CLAUDE.md  Makefile  README.md  dev.ps1  dev.sh  docker-compose.yml  monitoring-enhanced.html  pyproject.toml  stop.ps1  stop.sh
.claude/skills/: agent-dev.md  alert-design.md  commit.md  dashboard-ui.md  docs.md  monitoring-research.md  owlmon-plan.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
agent/: config.yaml  go.mod  go.sum  main.go
agent/collector/: cpu.go  disk.go  memory.go  network.go  servicecheck.go
agent/config/: config.go
agent/exporter/: buffered.go  buffered_test.go  otlp.go  persistence.go
agent/service/: unix.go  windows.go
docs/: ROADMAP.md  SNMP-GUIDE.md  TECH-STACK.html  TECH-STACK.md  improvements.html
docs/guides/: agent.html  agent.md
infra/otel/: otel-collector.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: install-agent-linux.sh  install-agent-windows.ps1  install-server-linux.sh  install-server-windows.ps1  uninstall-agent-linux.sh  uninstall-agent-windows.ps1  uninstall-server-linux.sh  uninstall-server-windows.ps1
server/: .env.example  go.mod  go.sum  main.go  run.ps1
server/alert/: checker.go  config.go  email.go  state.go
server/anomaly/: detector.go  detector_test.go  predictor.go  predictor_test.go
server/auth/: jwt.go  middleware.go
server/db/: alert_config_store.go  alert_history.go  asset_store.go  db.go  history_saver.go  log_partition.go  log_store.go  snmp_device_store.go
server/handler/: alert.go  anomaly.go  asset.go  auth.go  history.go  logs.go  logs_test.go  proxy.go  report.go  snmp.go  status.go
server/ingest/: worker.go
server/report/: reporter.go
tests/: test_smoke.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  (+2 more)
(+25 files in other folders)
