[project]
name = "owlmon"
version = "0.1.0"
description = "IT 전담 없는 중소기업을 위한 서버 모니터링 솔루션"
requires-python = ">=3.11"
license = "MIT"

# 공통 의존성
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
# 에이전트 의존성
agent = [
    "psutil>=5.9",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "httpx>=0.25",
]
# API 서버 의존성
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "prometheus-client>=0.20",
]
# 개발 도구
dev = [
    "pytest>=7.4,<8",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx>=0.25",
]
# 전체 설치
all = ["owlmon[agent,api,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# === Ruff (린터 + 포매터) ===
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line-length는 포매터에 위임
]

[tool.ruff.lint.isort]
known-first-party = ["owlmon"]

# === Mypy (타입 체크) ===
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["prometheus_client.*", "psutil.*"]
ignore_missing_imports = true

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
